--- a/style.css
+++ b/style.css
@@ -4112,7 +4112,7 @@ body > .skiptranslate {
     color: #000;
     font-size: 1rem;
     padding: 15px;
-    background-color: #6E6E6E;
+    background-color: #A7BEAE;
     border: 1px solid #ddd;
     margin: 0;
     font-weight: bold;
