--- a/style.css
+++ b/style.css
@@ -3290,7 +3290,7 @@ body > .skiptranslate {
 .error-page .error-inner h1 {
 	font-size: 100px;
 	text-shadow: 3px 5px 2px #3333;
-	color: #a52b28;
+	color: #000;
 	font-weight: 700;
 }
 .error-page .error-inner h1 span {
